Add flyway migrations, code refactoring

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -6,5 +6,8 @@ spring:
     url: ${SPRING_DATASOURCE_URL:jdbc:postgresql://localhost:5432/projects_management}
     username: ${SPRING_DATASOURCE_USERNAME:postgres}
     password: ${SPRING_DATASOURCE_PASSWORD:1}
+  flyway:
+    baseline-on-migrate: true
+    enabled: true
 
 
