--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,4 +1,11 @@
 spring:
+  data:
+    web:
+      sort:
+        sort-parameter: creation_date
+      pageable:
+        default-page-size: 3
+        max-page-size: 20
   jpa:
     hibernate:
       ddl-auto: validate
@@ -8,6 +15,8 @@ spring:
     password: ${SPRING_DATASOURCE_PASSWORD:1}
   flyway:
     baseline-on-migrate: true
-    enabled: true
+
+
+
 
 
